package pt.ipp.isep.dei.esoft.project.domain;

public class Team {
}
